--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "esbuild src/index.ts --bundle --outfile=bin/bundle.js",
     "build-page": "esbuild src/test-page.ts --bundle --outfile=bin/test-page.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "live-server index.html"
+    "dev": "live-server bin"
   },
   "author": "",
   "license": "ISC",
