--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "test-page.ts",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --outfile=bin/bundle.js",
-    "build-page": "esbuild src/examples/test-page.ts --bundle --outfile=bin/test-page.js --sourcemap",
+    "build-minimal": "esbuild src/examples/minimal.ts --bundle --outfile=bin/minimal.js --sourcemap",
+    "build-symbol-explorer": "esbuild src/examples/symbol-explorer.ts --bundle --outfile=bin/symbol-explorer.js --sourcemap",
+    "build-page": "npm run build-symbol-explorer && npm run build-minimal",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "live-server bin"
   },
