--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "build-minimal": "esbuild src/examples/minimal.ts --bundle --outfile=bin/minimal.js --sourcemap",
     "build-symbol-explorer": "esbuild src/examples/symbol-explorer.ts --bundle --outfile=bin/symbol-explorer.js --sourcemap",
     "build-dynamic-content": "esbuild src/examples/dynamic-content.ts --bundle --outfile=bin/dynamic-content.js --sourcemap",
+    "build-mouse-interaction": "esbuild src/examples/mouse-interaction.ts --bundle --outfile=bin/mouse-interaction.js --sourcemap",
     "build-dom": "esbuild src/examples/dom.ts --bundle --outfile=bin/dom.js --sourcemap",
-    "build-page": "npm run build-symbol-explorer && npm run build-minimal && npm run build-dynamic-content && npm run build-dom",
+    "build-page": "npm run build-symbol-explorer && npm run build-minimal && npm run build-dynamic-content && npm run build-dom && npm run build-mouse-interaction",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "live-server bin"
   },
