--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files":[
+  "files": [
     "dist"
   ],
   "scripts": {
@@ -18,12 +18,16 @@
     "build-game": "esbuild src/examples/game/Main.ts --bundle --outfile=bin/game.js --sourcemap",
     "build-dom": "esbuild src/examples/dom.ts --bundle --outfile=bin/dom.js --sourcemap",
     "build-page": "npm run build-symbol-explorer && npm run build-minimal && npm run build-dynamic-content && npm run build-dom && npm run build-mouse-interaction && npm run build-functional-composition && npm run build-game",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "live-server bin"
   },
   "author": "",
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "esbuild": "^0.14.5",
+    "esbuild-runner": "^2.2.1",
+    "jest": "^27.4.7",
     "live-server": "^1.2.1"
-  }
+  },
+  "dependencies": {}
 }
