--- a/package/package.json
+++ b/package/package.json
@@ -8,16 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "prepare": "npm run build",
-    "build": "esbuild src/index.ts --bundle --outfile=dist/index.js",
-    "build-minimal": "esbuild src/examples/minimal.ts --bundle --outfile=bin/minimal.js --sourcemap",
-    "build-symbol-explorer": "esbuild src/examples/symbol-explorer.ts --bundle --outfile=bin/symbol-explorer.js --sourcemap",
-    "build-dynamic-content": "esbuild src/examples/dynamic-content.ts --bundle --outfile=bin/dynamic-content.js --sourcemap",
-    "build-mouse-interaction": "esbuild src/examples/mouse-interaction.ts --bundle --outfile=bin/mouse-interaction.js --sourcemap",
-    "build-functional-composition": "esbuild src/examples/functional-composition.ts --bundle --outfile=bin/functional-composition.js --sourcemap",
-    "build-game": "esbuild src/examples/game/Main.ts --bundle --outfile=bin/game.js --sourcemap",
-    "build-dom": "esbuild src/examples/dom.ts --bundle --outfile=bin/dom.js --sourcemap",
-    "build-page": "npm run build-symbol-explorer && npm run build-minimal && npm run build-dynamic-content && npm run build-dom && npm run build-mouse-interaction && npm run build-functional-composition && npm run build-game",
+    "prepare": "esbuild",
+    "build": "node build.js",
     "test": "jest",
     "dev": "live-server bin"
   },
@@ -25,10 +17,10 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "axios": "^0.25.0",
-    "esbuild": "^0.14.5",
+    "esbuild": "^0.14.14",
     "esbuild-runner": "^2.2.1",
     "jest": "^27.4.7",
-    "live-server": "^1.2.1"
-  },
-  "dependencies": {}
+    "npm-dts": "^1.3.11",
+    "typescript": "^4.5.5"
+  }
 }
