--- a/package/package.json
+++ b/package/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "prepare": "esbuild",
-    "build": "node build.js",
+    "build": "tsc --project tsconfig.prod.json",
     "test": "jest",
     "dev": "live-server bin"
   },
@@ -21,6 +21,7 @@
     "esbuild-runner": "^2.2.1",
     "jest": "^27.4.7",
     "npm-dts": "^1.3.11",
+    "tsup": "^5.11.13",
     "typescript": "^4.5.5"
   }
 }
