--- a/package/package.json
+++ b/package/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animate_cc_runtime",
+  "name": "animcc",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -8,8 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "prepare": "esbuild",
-    "build": "tsc --project tsconfig.prod.json",
+    "prepare": "npm run build",
+    "build": "rimraf dist && tsc --project tsconfig.prod.json",
     "test": "jest",
     "dev": "live-server bin"
   },
@@ -21,6 +21,7 @@
     "esbuild-runner": "^2.2.1",
     "jest": "^27.4.7",
     "npm-dts": "^1.3.11",
+    "rimraf": "^3.0.2",
     "tsup": "^5.11.13",
     "typescript": "^4.5.5"
   }
