--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animcc",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "Animate CC runtime for Canvas 2d",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,6 +10,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc --project tsconfig.prod.json",
+    "postbuild": "copy package.json dist",
     "test": "jest",
     "dev": "live-server bin"
   },
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "axios": "^0.25.0",
+    "copy": "^0.3.2",
     "esbuild": "^0.14.14",
     "esbuild-runner": "^2.2.1",
     "jest": "^27.4.7",
