--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "staticOutPath": "assets"
   },
   "dependencies": {
-    "lit-element": "^3.1.2",
+    "lit": "^2.1.3",
     "parcel": "^2.2.1"
   }
 }
