--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 # example netlify.toml
 [build]
-  command = "npm run build"
+  command = "npm run build-examples"
   functions = "netlify/functions"
-  publish = "bin"
+  publish = "dist-examples"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
